--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="description" content="Divisórias Jaraguá - Especializada em divisórias e forros de alta qualidade. Conheça nossos produtos e serviços.">
   <title>Divisórias Jaraguá</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Fontes: Lato e Lexend Deca (Google Fonts) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Cabeçalho com Navbar -->
@@ -19,7 +24,7 @@
         <li><a href="#produtos">Produtos</a></li>
         <li><a href="#servicos">Serviços</a></li>
         <li><a href="#orcamento">Orçamento</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#contato">Fale conosco!</a></li>
       </ul>
       <a href="#orcamento" class="btn-orcamento">Faça seu Orçamento</a>
     </nav>
@@ -41,12 +46,9 @@
     <section id="carousel" class="carousel">
       <div class="carousel-container">
         <div class="carousel-slide">
-          <img src="Imagens/DivisóriaEucatex1" alt="Imagem 1 - Divisórias Jaraguá">
+          <img src="Imagens/DivisoriaEucatex1.webp" alt="Imagem 1 - Divisórias Jaraguá">
           <img src="Imagens/DivisóriaEucatex.webp" alt="Imagem 2 - Divisórias Jaraguá">
           <img src="Imagens/DivisóriaDryWall.jpg" alt="Imagem 3 - Divisórias Jaraguá">
-          <img src="Imagens/" alt="Imagem 4 - Divisórias Jaraguá">
-          <img src="Imagens/" alt="Imagem 5 - Divisórias Jaraguá">
-          <img src="Imagens/" alt="Imagem 6 - Divisórias Jaraguá">
         </div>
       </div>
       <button class="prev" aria-label="Imagem anterior">&#10094;</button>
@@ -90,12 +92,12 @@
     <section id="contato" class="contato">
         <h2>Contato</h2>
         <div class="contato-links">
-           <a href="https://wa.me/5511999999999" target="_blank" aria-label="Contate via WhatsApp">
-             <img src="img/whatsapp-icon.png" alt="Ícone WhatsApp">
+           <a href="https://wa.me/5500000000" target="_blank" aria-label="Contate via WhatsApp">
+             <img src="Imagens/whatsapp.png" alt="Ícone WhatsApp">
              WhatsApp
            </a>
            <a href="https://www.facebook.com/divisoriasjgs/?_rdr" target="_blank" aria-label="Visite nossa página no Facebook">
-             <img src="img/facebook-icon.png" alt="Ícone Facebook">
+             <img src="Imagens/facebook.png" alt="Ícone Facebook">
              Facebook
            </a>
         </div>
