--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="forros-carousel-track">
               <!-- Card 1: Forro de PVC -->
               <div class="forros-card">
-                <img src="Imagens/ForroPVC.jpg" alt="Forro de PVC">
+                <img src="Imagens/ForroPvc.jpg" alt="Forro de PVC">
                 <div class="forros-info">
                   <h3>Forro de PVC</h3>
                   <p>Durável, resistente à umidade e de fácil manutenção – ideal para ambientes úmidos com acabamento
