--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="carousel-slide">
           <img src="Imagens/divisória.jpg" alt="Divisórias Jaraguá - Slide 2">
           <img src="Imagens/Divisória1.jpg" alt="Divisórias Jaraguá - Slide 1">
-          <img src="Imagens/divisória2.jpg" alt="Divisórias Jaraguá - Slide 3">
+          <img src="Imagens/Divisória2.jpg" alt="Divisórias Jaraguá - Slide 3">
         </div>
       </div>
       <button class="prev" aria-label="Imagem anterior">&#10094;</button>
