--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lexend+Deca:wght@400;700&display=swap"
     rel="stylesheet">
+
+  <link rel="shortcut icon" href="./Imagens/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -209,12 +211,15 @@
         <!-- Seção de Orçamento com formulário personalizado -->
         <section id="orcamento" class="orcamento">
           <h2 class="section-title" >Solicite seu orçamento</h2>
-          <form action="#" method="post" class="form-orcamento">
+          <form action="https://formspree.io/f/mzzdnenl" method="post" class="form-orcamento">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
 
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" placeholder="Seu email" required>
+            
+            <label for="email">Telefone:</label>
+            <input type="tel" name="Telefone" placeholder="Seu número de telefone" required>
 
             <label for="mensagem">Mensagem:</label>
             <textarea id="mensagem" name="mensagem" placeholder="Como podemos ajudar?" required></textarea>
@@ -222,12 +227,13 @@
             <button type="submit" class="btn">Enviar</button>
           </form>
         </section>
+        
 
         <!-- Seção de Contato -->
         <section id="contato" class="contato">
           <h2 class="section-title" style="width: 90vw; border-radius: 15px; margin-bottom: 3vh;">Contato</h2>
           <div class="contato-links">
-            <a href="https://wa.me/5500000000" target="_blank" aria-label="Contate via WhatsApp">
+            <a href="https://wa.me/554799111957" target="_blank" aria-label="Contate via WhatsApp">
               <img src="Imagens/whatsapp.png" alt="Ícone WhatsApp">
               WhatsApp
             </a>
